// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton creates correct snapshot for danger styled button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text IconButton-buttonDanger-56"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      buttonText
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root IconButton-icon-57"
      >
        store
      </span>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`IconButton creates correct snapshot for required props 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text IconButton-button-1"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      buttonText
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root IconButton-icon-3"
      >
        store
      </span>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
